CAMEL-22183 - camel-fury - Rename Fury to Fory
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/docs/components/modules/dataformats/nav.adoc
+++ b/docs/components/modules/dataformats/nav.adoc
@@ -16,7 +16,7 @@
 ** xref:fhirJson-dataformat.adoc[FHIR JSon]
 ** xref:fhirXml-dataformat.adoc[FHIR XML]
 ** xref:flatpack-dataformat.adoc[Flatpack]
-** xref:fury-dataformat.adoc[Fury]
+** xref:fory-dataformat.adoc[Fory]
 ** xref:grok-dataformat.adoc[Grok]
 ** xref:gzipDeflater-dataformat.adoc[GZip Deflater]
 ** xref:hl7-dataformat.adoc[HL7]
