--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
@@ -53,3 +53,7 @@ For example `set-body` and `set-header` should be `setBody` / `setHeader` etc.
 
 Remove the deprecated `camel.springboot.xxx` configuration syntax. Use `camel.main.xxx` syntax
 which is standard across all runtimes.
+
+=== camel-fury
+
+Camel Fury dataformat has been renamed camel-fory, this is valid for all the component elements: scheme, DSL and documentation.
