--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
@@ -49,6 +49,28 @@ Renamed class `org.apache.camel.component.http.BasicAuthenticationHttpClientConf
 The deprecated kebab-case has been removed.
 For example `set-body` and `set-header` should be `setBody` / `setHeader` etc.
 
+=== template components
+
+The following components has corrected `contentCache` option to be default true. For most this was already the case,
+but the documentation was mistakenly defined as `false`. We also added `contentCache` on component level,
+so this can be configured globally.
+
+- camel-chunk
+- camel-freemarker
+- camel-jolt
+- camel-jslt
+- camel-json-patch
+- camel-json-validator
+- camel-jsonata
+- camel-jte
+- camel-language
+- camel-mustache
+- camel-mvel
+- camel-robotframework
+- camel-stringtemplate
+- camel-thymeleaf
+- camel-velocity
+
 == Camel Spring Boot
 
 Remove the deprecated `camel.springboot.xxx` configuration syntax. Use `camel.main.xxx` syntax
