CAMEL-22200: components that are resource endpoint based should have content cache true as default and make it configurable on component level.

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
@@ -44,6 +44,10 @@ and you would have to restart the route to attempt again.
 
 Renamed class `org.apache.camel.component.http.BasicAuthenticationHttpClientConfigurer` to `org.apache.camel.component.http.DefaultAuthenticationHttpClientConfigurer`.
 
+=== camel-language
+
+If using a header to provide a custom script, then this must now be turned on via `allowTemplateFromHeader=true` on the endpoint or component.
+
 === camel-yaml-dsl
 
 The deprecated kebab-case has been removed.
