CAMEL-22200: components that are resource endpoint based should have content cache true as default and make it configurable on component level.

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
@@ -75,6 +75,8 @@ so this can be configured globally.
 - camel-thymeleaf
 - camel-velocity
 
+Also, most of the components above supports using a header to provide a custom template, then this must now be turned on via `allowTemplateFromHeader=true` on the endpoint or component.
+
 == Camel Spring Boot
 
 Remove the deprecated `camel.springboot.xxx` configuration syntax. Use `camel.main.xxx` syntax
