--- a/docs/user-manual/modules/ROOT/pages/camel-jbang.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-jbang.adoc
@@ -3890,10 +3890,10 @@ The follow options related to _exporting_, can be configured in `application.pro
 |Whether downloading JARs from ASF Maven Snapshot repository is enabled
 
 |`camel.jbang.download`
-Whether to allow automatic downloading JAR dependencies (over the internet)
+|Whether to allow automatic downloading JAR dependencies (over the internet)
 
 |`camel.jbang.packageScanJars`
-Whether to automatic package scan JARs for custom Spring or Quarkus beans making them available for Camel JBang
+|Whether to automatic package scan JARs for custom Spring or Quarkus beans making them available for Camel JBang
 
 |`camel.jbang.exportDir`
 |Directory where the project will be exported
