--- a/docs/components/modules/ROOT/nav.adoc
+++ b/docs/components/modules/ROOT/nav.adoc
@@ -8,6 +8,7 @@
 *** xref:chatscript-component.adoc[ChatScript]
 *** xref:djl-component.adoc[Deep Java Library]
 *** xref:kserve-component.adoc[KServe]
+*** xref:langchain4j-agent-component.adoc[LangChain4j Agent]
 *** xref:langchain4j-chat-component.adoc[LangChain4j Chat]
 *** xref:langchain4j-embeddings-component.adoc[LangChain4j Embeddings]
 *** xref:langchain4j-tools-component.adoc[LangChain4j Tools]
