--- a/core/camel-core-engine/src/main/docs/modules/eips/pages/setBody-eip.adoc
+++ b/core/camel-core-engine/src/main/docs/modules/eips/pages/setBody-eip.adoc
@@ -67,6 +67,22 @@ XML::
     <to uri="log:hello"/>
 </route>
 ----
+
+YAML::
++
+[source,yaml]
+----
+- route:
+    from:
+      uri: direct:cheese
+      steps:
+        - setBody:
+            simple:
+              expression: Hello ${body}
+        - to:
+            uri: log:hello
+----
+
 ====
 
 == What is the difference between Transform and Set Body?
