--- a/components/camel-groovy/src/main/docs/groovy-language.adoc
+++ b/components/camel-groovy/src/main/docs/groovy-language.adoc
@@ -173,14 +173,15 @@ In *Camel 4.14* we have added support for loading groovy source files and pre-co
 on startup. This allows to have a common set of groovy classes and functions which can be
 used by Camel and Java.
 
-To enable this you need to configure this in `camel-main` via
+By default, scripts can be placed in `src/main/resources/camel-groovy` folder, but
+can be fully configured via ANT path style such as:
 
 [source,properties]
 ----
 camel.main.groovyScriptPattern = myscript/*.groovy
 ----
 
-Then in the `src/main/resources/myscript` folder you can have groovy source files that Camel
+Then in the `src/main/resources/camel-groovy` folder you can have groovy source files that Camel
 will pre-compile on startup, and make global available via a special `GroovyScriptClassLoader`.
 
 Because this class-loader is required to be in use for being able to load the groovy pre-compiled
